# IyonixMesa

./: Make-cfg  Makefile.in  Makefile.mgl  Mingw32.bat  README.md  acconfig.h  aclocal.m4  conf.h.in  configure  configure.in  ltmain.sh
IyonixDemos/: Readme
IyonixDemos/!Cubes/: !Run  !RunImage  Makefile  cubes.c
OpenStep/Old_NeXT/: Makefile.NeXT
WIN32/: NMAKE.MAK  NMAKE.MIF
WIN32/RES/: mesaglu32.def
WIN32/RULES/: lib.glut32  lib.mesa.core  lib.mesaglu.core  progs.demos
docs/: CONFORM  COPYRIGHT  DEVINFO  IAFA-PACKAGE  INSTALL  README  README.MGL
include/: GLView.h  Makefile.in
include/GL/: Makefile.in  dosmesa.h  glu.h  iyonixmesa.h  xmesa_x.h  xmesa_xf86.h
macos/gli_api/: gliapi1.h  gliapi2.h  gliapiext.h
src/: Makefile  Makefile.BeOS  Makefile.BeOS-R4  Makefile.D3D  Makefile.DOS  Makefile.am  Makefile.cygnus  Makefile.dja  Makefile.fx  Makefile.in  Makefile.m32  accum.c  all.h  alpha.c  alpha.h  alphabuf.c  alphabuf.h  api.h  api1.c  api2.c  apiext.c  bbox.c  bitmap.c  bitmap.h  blend.c  clip_funcs.h  clip_tmp.h  config.c  config.h  context.c  copypix.c  copypix.h  cull_tmp.h  cva.c  cva.h  ddsample.c  debug_xform.c  depth.c  dlist.c  drawpix.c  (+74 more)
src-aux/: Makefile
src-glu/: Makefile  Makefile.am  Makefile.dja  Makefile.fx  Makefile.in  nurbs.c  nurbscrv.c  nurbssrf.c  nurbsutl.c  quadric.c  tess.c  tess_clip.c  tess_clip.h  tess_fist.c  tess_fist.h  tess_hash.c  tess_hash.h  tess_heap.c  tess_heap.h  tess_macros.h  tess_typedefs.h  tess_winding.c  tess_winding.h
src/FX/: Makefile.in  (+7 more)
util/: Makefile.am  Makefile.in
widgets-mesa/: configure.in
(+135 files in other folders)
